<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Artist</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="justin_bieber">Justin Bieber</string>
    <string name="website">https://www.justinbiebermusic.com</string>
    <string name="tel">Tel: +1-JUS-TIN-0000</string>
    <string name="email">Email: justin@bieber.com</string>
    <string name="likes">Likes: singing, movie</string>
    <string name="dislikes">Dislikes: losing laptop</string>
    <string name="dob">Date of Birth: March 1, 1994</string>
    <string name="twitter">https://twitter.com/justinbieber</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="watch">Watch</string>
    <string name="try_music">Listen to the music of Justin Bieber</string>
    <string name="try_video">Watch music video of Justin Bieber</string>
    <string name="wall_paper">Wall paper</string>
    <string name="mailling_list">subscribe me</string>

    <string-array name="music_array">
        <item>Baby</item>
        <item>Boyfriend</item>
    </string-array>
    <string-array name="video_array">
        <item>Never say never</item>
        <item>Beauty and beast</item>
    </string-array>

    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_subscribe">SubscribeActivity</string>
    <string name="subscribe">Subscribe me</string>
    <string name="type_email_here">Type your Email address here</string>

</resources>